==> jeyabalan-1902/SmartTouchX/STM32_DISPLAY_APP/Core/Src/RFM/rf69.c <==
#include "rf69.h"
#include "main.h"
#include <string.h>
#include <stdio.h>
#include <stdbool.h>
#include "user_app.h"
#define RH_BROADCAST_ADDRESS  0xff
#define CONFIG_FSK  (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_NONE)
#define CONFIG_GFSK (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_FSK | RH_RF69_DATAMODUL_MODULATIONSHAPING_FSK_BT1_0)
#define CONFIG_OOK  (RH_RF69_DATAMODUL_DATAMODE_PACKET | RH_RF69_DATAMODUL_MODULATIONTYPE_OOK | RH_RF69_DATAMODUL_MODULATIONSHAPING_OOK_NONE)
#define CONFIG_NOWHITE    (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_NONE | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_WHITE      (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_WHITENING | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define CONFIG_MANCHESTER (RH_RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RH_RF69_PACKETCONFIG1_DCFREE_MANCHESTER | RH_RF69_PACKETCONFIG1_CRC_ON | RH_RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)
#define LOW  0
#define HIGH 1

uint8_t spiRead(uint8_t reg)
{
	uint8_t val;
	uint8_t TxDt;

	TxDt = (reg & ~RH_RF69_SPI_WRITE_MASK);
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_Transmit(&hspi3, &TxDt,sizeof(TxDt), 1000);                   // Send the address with the write mask off
	HAL_SPI_Receive(&hspi3, &val, sizeof(val), 1000);                     // The written value is ignored, reg value is read
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_SET);
	return val;
}

uint8_t spiWrite(uint8_t reg, uint8_t val)
{
	uint8_t TxDt;
	uint8_t status = 0;

	TxDt = (reg | RH_RF69_SPI_WRITE_MASK);
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_TransmitReceive(&hspi3, &TxDt, &status, sizeof(TxDt), 1000); // Send the address with the write mask on
	HAL_SPI_Transmit(&hspi3, &val, sizeof(val), 1000);                   // New value follows
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_SET);
	return status;
}

uint8_t spiBurstRead(uint8_t reg, uint8_t* dest, uint8_t len)
{
	uint8_t TxDt;
	uint8_t dummyData =0;
	uint8_t rxDt =0;
	uint8_t status = 0;
	TxDt = (reg & ~RH_RF69_SPI_WRITE_MASK);
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_TransmitReceive(&hspi3, &TxDt, &status, sizeof(TxDt), 1000); // Send the start address with the write mask off
	while (len--)
	{
		HAL_SPI_TransmitReceive(&hspi3, &dummyData, &rxDt, sizeof(rxDt), 1000);
		*dest++ = rxDt;
	}
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_SET);
	return status;
}

uint8_t spiBurstWrite(uint8_t reg, const uint8_t* src, uint8_t len)
{
	uint8_t TxDt;
	uint8_t status = 0;
	uint8_t TxDt1;
	TxDt = (reg | RH_RF69_SPI_WRITE_MASK);
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_TransmitReceive(&hspi3, &TxDt, &status, sizeof(TxDt), 1000);  // Send the start address with the write mask on
	while (len--)
	{
		TxDt1 = *src++;
		HAL_SPI_Transmit(&hspi3, &TxDt1, sizeof(TxDt1), 1000);            // New value follows
	}
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, GPIO_PIN_SET);
	return status;
}

void readFifo()
{
	uint8_t Data;
	uint8_t payloadlen ;

	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, 0);
	Data = RH_RF69_REG_00_FIFO;
	HAL_SPI_Transmit(&hspi3, &Data, sizeof(Data), 100) ;			// Send the start address with the write mask off
	HAL_SPI_Receive(&hspi3, &payloadlen, sizeof(payloadlen), 100);	// First byte is payload len (counting the headers)
	safe_printf("PayloadLen:%d\n",payloadlen);
	if (payloadlen <= RH_RF69_MAX_ENCRYPTABLE_PAYLOAD_LEN && payloadlen >= RH_RF69_HEADER_LEN)
	{
		HAL_SPI_Receive(&hspi3, &_rxHeaderTo, sizeof(_rxHeaderTo), 100);
		printf("_rxHeaderTo:%d\n",_rxHeaderTo);
		// Check addressing
		if (_promiscuous ||	_rxHeaderTo == _thisAddress ||_rxHeaderTo == RH_BROADCAST_ADDRESS)
		{
			// Get the rest of the headers
			HAL_SPI_Receive(&hspi3, &_rxHeaderFrom, sizeof(_rxHeaderFrom), 1000);
			safe_printf("_rxHeaderFrom:%d\n",_rxHeaderFrom);
			HAL_SPI_Receive(&hspi3, &_rxHeaderId, sizeof(_rxHeaderId), 1000);
			safe_printf("_rxHeaderId:%d\n",_rxHeaderId);
			HAL_SPI_Receive(&hspi3, &_rxHeaderFlags, sizeof(_rxHeaderFlags), 1000);
			safe_printf("_rxHeaderFlags:%d\n",_rxHeaderFlags);

			// And now the real payload
			for (_bufLen = 0; _bufLen < (payloadlen - RH_RF69_HEADER_LEN); _bufLen++)
			{
				HAL_SPI_Receive(&hspi3, &_buf[_bufLen], 1, 1000);
			}
				_rxGood++;
				_rxBufValid = true;
		}
	}
	HAL_GPIO_WritePin(RF_CS_GPIO_Port, RF_CS_Pin, 1);
	// Any junk remaining in the FIFO will be cleared next time we go to receive mode.
}

int8_t temperatureRead()
{
	// Caution: must be ins standby.
	//	  setModeIdle();
	spiWrite(RH_RF69_REG_4E_TEMP1, RH_RF69_TEMP1_TEMPMEASSTART); // Start the measurement
	while (spiRead(RH_RF69_REG_4E_TEMP1) & RH_RF69_TEMP1_TEMPMEASRUNNING)
		;                                                        // Wait for the measurement to complete
	return 166 - spiRead(RH_RF69_REG_4F_TEMP2);                  // Very approximate, based on observation
}

bool setFrequency(float centre)
{
	uint32_t frf = (uint32_t)((centre * 1000000.0) / RH_RF69_FSTEP);
	spiWrite(RH_RF69_REG_07_FRFMSB, (frf >> 16) & 0xff);
	spiWrite(RH_RF69_REG_08_FRFMID, (frf >> 8) & 0xff);
	spiWrite(RH_RF69_REG_09_FRFLSB, frf & 0xff);

	return true;
}

void setModeIdle()
{
	if (_mode != RHModeIdle)
	{
		if (_power >= 18)
		{
			// If high power boost, return power amp to receive mode
			spiWrite(RH_RF69_REG_5A_TESTPA1, RH_RF69_TESTPA1_NORMAL);
			spiWrite(RH_RF69_REG_5C_TESTPA2, RH_RF69_TESTPA2_NORMAL);
		}
		setOpMode(_idleMode);
		_mode = RHModeIdle;
	}
}

void setModeRx()
{
	if (_mode != RHModeRx)
	{
		if (_power >= 18)
		{
			spiWrite(RH_RF69_REG_5A_TESTPA1, RH_RF69_TESTPA1_NORMAL);
			spiWrite(RH_RF69_REG_5C_TESTPA2, RH_RF69_TESTPA2_NORMAL);
		}
		spiWrite(RH_RF69_REG_25_DIOMAPPING1, RH_RF69_DIOMAPPING1_DIO0MAPPING_01);
		setOpMode(RH_RF69_OPMODE_MODE_RX);
		_mode = RHModeRx;
	}
}

void setModeTx()
{
	if (_mode != RHModeTx)
	{
		if (_power >= 18)
		{
			// Set high power boost mode
			// Note that OCP defaults to ON so no need to change that.
			spiWrite(RH_RF69_REG_5A_TESTPA1, RH_RF69_TESTPA1_BOOST);
			spiWrite(RH_RF69_REG_5C_TESTPA2, RH_RF69_TESTPA2_BOOST);
		}
		spiWrite(RH_RF69_REG_25_DIOMAPPING1, RH_RF69_DIOMAPPING1_DIO0MAPPING_00); // Set interrupt line 0 PacketSent
		setOpMode(RH_RF69_OPMODE_MODE_TX); // Clears FIFO
		_mode = RHModeTx;
	}
}

void setTxPower(int8_t power, bool ishighpowermodule)
{
  _power = power;
  uint8_t palevel;

  if (ishighpowermodule)
  {
	if (_power < -2)
	  _power = -2; //RFM69HW only works down to -2.
	if (_power <= 13)
	{
	  // -2dBm to +13dBm
	  //Need PA1 exclusivelly on RFM69HW
	  palevel = RH_RF69_PALEVEL_PA1ON | ((_power + 18) &
	  RH_RF69_PALEVEL_OUTPUTPOWER);
	}
	else if (_power >= 18)
	{
	  // +18dBm to +20dBm
	  // Need PA1+PA2
	  // Also need PA boost settings change when tx is turned on and off, see setModeTx()
	  palevel = RH_RF69_PALEVEL_PA1ON
	| RH_RF69_PALEVEL_PA2ON
	| ((_power + 11) & RH_RF69_PALEVEL_OUTPUTPOWER);
	}
	else
	{
	  // +14dBm to +17dBm
	  // Need PA1+PA2
	  palevel = RH_RF69_PALEVEL_PA1ON
	| RH_RF69_PALEVEL_PA2ON
	| ((_power + 14) & RH_RF69_PALEVEL_OUTPUTPOWER);
	}
  }
  else
  {
	if (_power < -18) _power = -18;
	if (_power > 13) _power = 13; //limit for RFM69W
	palevel = RH_RF69_PALEVEL_PA0ON
	  | ((_power + 18) & RH_RF69_PALEVEL_OUTPUTPOWER);
  }
  spiWrite(RH_RF69_REG_11_PALEVEL, palevel);
}

void setModemRegisters(const ModemConfig* config)
{
	spiBurstWrite(RH_RF69_REG_02_DATAMODUL,		&config->reg_02, 5);
	spiBurstWrite(RH_RF69_REG_19_RXBW,			&config->reg_19, 2);
	spiWrite(RH_RF69_REG_37_PACKETCONFIG1,		 config->reg_37);

}

void setPreambleLength(uint16_t bytes)
{
	spiWrite(RH_RF69_REG_2C_PREAMBLEMSB, bytes >> 8);
	spiWrite(RH_RF69_REG_2D_PREAMBLELSB, bytes & 0xff);
}

void setSyncWords(const uint8_t* syncWords, uint8_t len)
{
	uint8_t syncconfig = spiRead(RH_RF69_REG_2E_SYNCCONFIG);

	if (syncWords && len && len <= 4)
	{
		spiBurstWrite(RH_RF69_REG_2F_SYNCVALUE1, syncWords, len);
		syncconfig |= RH_RF69_SYNCCONFIG_SYNCON;
	}
	else
	{
		syncconfig &= ~RH_RF69_SYNCCONFIG_SYNCON;
	}
		syncconfig &= ~RH_RF69_SYNCCONFIG_SYNCSIZE;
		syncconfig |= (len-1) << 3;
		safe_printf("syncconfig=%x\n", syncconfig);
		spiWrite(RH_RF69_REG_2E_SYNCCONFIG, syncconfig);

}

void setEncryptionKey(uint8_t* key)
{
	if (key)
	{
		spiBurstWrite(RH_RF69_REG_3E_AESKEY1, key, 16);
		spiWrite(RH_RF69_REG_3D_PACKETCONFIG2, spiRead(RH_RF69_REG_3D_PACKETCONFIG2) | RH_RF69_PACKETCONFIG2_AESON);
	}
	else
	{
		spiWrite(RH_RF69_REG_3D_PACKETCONFIG2, spiRead(RH_RF69_REG_3D_PACKETCONFIG2) & ~RH_RF69_PACKETCONFIG2_AESON);
	}
}

bool waitPacketSent()
{
	while (1)
	{
		    // Get the interrupt cause
		uint8_t irqflags2 = spiRead(RH_RF69_REG_28_IRQFLAGS2);
		    //printf("waitPacketSent irqflags2=%x\n", irqflags2);
		if (irqflags2 & RH_RF69_IRQFLAGS2_PACKETSENT)
		{
	       // A transmitter message has been fully sent
		   // Clears FIFO
			setModeIdle();
			_txGood++;
			safe_printf("PACKETSENT\n");
			break;
		}
	}
	return true;
}
