==> alex-5zi/noolite-arduino/libraries/RF69/RF69.cpp <==
#include <RF69.h>
#include <peripheral/int.h>
#define memcpy_P memcpy
#define ATOMIC_BLOCK_START unsigned int __status = INTDisableInterrupts(); {
#define ATOMIC_BLOCK_END } INTRestoreInterrupts(__status);
#include <util/atomic.h>
#define ATOMIC_BLOCK_START     ATOMIC_BLOCK(ATOMIC_RESTORESTATE) {
#define ATOMIC_BLOCK_END }
#define CONFIG_FSK (RF69_DATAMODUL_DATAMODE_PACKET | RF69_DATAMODUL_MODULATIONTYPE_FSK | RF69_DATAMODUL_MODULATIONSHAPING_FSK_NONE)
#define CONFIG_GFSK (RF69_DATAMODUL_DATAMODE_PACKET | RF69_DATAMODUL_MODULATIONTYPE_FSK | RF69_DATAMODUL_MODULATIONSHAPING_FSK_BT0_5)
#define CONFIG_OOK (RF69_DATAMODUL_DATAMODE_PACKET | RF69_DATAMODUL_MODULATIONTYPE_OOK | RF69_DATAMODUL_MODULATIONSHAPING_OOK_NONE)
#define CONFIG_NOWHITE (RF69_PACKETCONFIG1_PACKETFORMAT_VARIABLE | RF69_PACKETCONFIG1_DCFREE_NONE | RF69_PACKETCONFIG1_CRC_ON | RF69_PACKETCONFIG1_ADDRESSFILTERING_NONE)

void RF69::readFifo()
{
    ATOMIC_BLOCK_START;
    digitalWrite(_slaveSelectPin, LOW);
    _spi->transfer(RF69_REG_00_FIFO); // Send the start address with the write mask off
   // uint8_t payloadlen = _spi->transfer(0); // First byte is payload len (counting the headers)
 //   if (payloadlen <= RF69_MAX_ENCRYPTABLE_PAYLOAD_LEN &&
//	payloadlen >= RF69_HEADER_LEN)
  //  {    
 //       tmp = payloadlen;
//	_rxHeaderTo = _spi->transfer(0);
	// Check addressing
//	if (_promiscuous ||
//	    _rxHeaderTo == _thisAddress ||
//	    _rxHeaderTo == RF69_BROADCAST_ADDRESS)
//	{
	    // Get the rest of the headers
//	    _rxHeaderFrom  = _spi->transfer(0);
//	    _rxHeaderId    = _spi->transfer(0);
//	    _rxHeaderFlags = _spi->transfer(0);
	    // And now the real payload
	    for (_bufLen = 0; _bufLen < 60; _bufLen++) //(payloadlen - RF69_HEADER_LEN)
		_buf[_bufLen] = _spi->transfer(0);
	    _rxBufValid = true;
	//}
   // }
    digitalWrite(_slaveSelectPin, HIGH);
    ATOMIC_BLOCK_END;
    // Any junk remaining in the FIFO will be cleared next time we go to receive mode.
}

uint8_t RF69::spiRead(uint8_t reg)
{
    uint8_t val;

    ATOMIC_BLOCK_START;
    digitalWrite(_slaveSelectPin, LOW);
    _spi->transfer(reg & ~RF69_SPI_WRITE_MASK); // Send the address with the write mask off
    val = _spi->transfer(0); // The written value is ignored, reg value is read
    digitalWrite(_slaveSelectPin, HIGH);
    ATOMIC_BLOCK_END;
    return val;
}

void RF69::spiWrite(uint8_t reg, uint8_t val)
{
    ATOMIC_BLOCK_START;
    digitalWrite(_slaveSelectPin, LOW);
    _spi->transfer(reg | RF69_SPI_WRITE_MASK); // Send the address with the write mask on
    _spi->transfer(val); // New value follows
    digitalWrite(_slaveSelectPin, HIGH);
    ATOMIC_BLOCK_END;
}

void RF69::spiBurstRead(uint8_t reg, uint8_t* dest, uint8_t len)
{
    ATOMIC_BLOCK_START;
    digitalWrite(_slaveSelectPin, LOW);
    _spi->transfer(reg & ~RF69_SPI_WRITE_MASK); // Send the start address with the write mask off
    while (len--)
	*dest++ = _spi->transfer(0);
    digitalWrite(_slaveSelectPin, HIGH);
    ATOMIC_BLOCK_END;
}

void RF69::spiBurstWrite(uint8_t reg, const uint8_t* src, uint8_t len)
{
    ATOMIC_BLOCK_START;
    digitalWrite(_slaveSelectPin, LOW);
    _spi->transfer(reg | RF69_SPI_WRITE_MASK); // Send the start address with the write mask on
    while (len--)
	_spi->transfer(*src++);
    digitalWrite(_slaveSelectPin, HIGH);
    ATOMIC_BLOCK_END;
}

int8_t RF69::temperatureRead()
{
    // Caution: must be ins standby.
//    setModeIdle();
    spiWrite(RF69_REG_4E_TEMP1, RF69_TEMP1_TEMPMEASSTART); // Start the measurement
    while (spiRead(RF69_REG_4E_TEMP1) & RF69_TEMP1_TEMPMEASRUNNING)
	; // Wait for the measurement to complete
    return -(int8_t)spiRead(RF69_REG_4F_TEMP2) - 40;
}

boolean RF69::setFrequency(float centre, float afcPullInRange)
{
    // Frf = FRF / FSTEP
    uint32_t frf = (centre * 1000000.0) / RF69_FSTEP;
    spiWrite(RF69_REG_07_FRFMSB, (frf >> 16) & 0xff);
    spiWrite(RF69_REG_08_FRFMID, (frf >> 8) & 0xff);
    spiWrite(RF69_REG_09_FRFLSB, frf & 0xff);

    // afcPullInRange is not used
    return true;
}

void RF69::setModeIdle()
{
    if (_mode != RF69_MODE_IDLE)
    {
	setMode(_idleMode);
	_mode = RF69_MODE_IDLE;
    }
}

void RF69::setModeRx()
{
    if (_mode != RF69_MODE_RX)
    {
	spiWrite(RF69_REG_25_DIOMAPPING1, RF69_DIOMAPPING1_DIO0MAPPING_01); // Set interrupt line 0 PayloadReady
	setMode(RF69_OPMODE_MODE_RX); // Clears FIFO
	_mode = RF69_MODE_RX;
    }
}

void RF69::setModeTx()
{
    if (_mode != RF69_MODE_TX)
    {
	spiWrite(RF69_REG_25_DIOMAPPING1, RF69_DIOMAPPING1_DIO0MAPPING_00); // Set interrupt line 0 PacketSent
	setMode(RF69_OPMODE_MODE_TX); // Clears FIFO
	_mode = RF69_MODE_TX;
    }
}

void RF69::setTxPower(int8_t power)
{
    uint8_t palevel;
    if (power < -18)
	power = -18;

    // See http://www.hoperf.com/upload/rfchip/RF69-V1.2.pdf section 3.3.6
    // for power formulas
    if (power >= 14)
    {
	// Need PA1+PA2
	palevel = RF69_PALEVEL_PA1ON | RF69_PALEVEL_PA2ON | ((power + 14) & RF69_PALEVEL_OUTPUTPOWER);
#if 0
	if (power >= 18)
	{
	    // Also need 20dBm boost settings, not implemented yet, see section 3.3.7
	    palevel = RF69_PALEVEL_PA1ON | RF69_PALEVEL_PA2ON | ((power + 11) & RF69_PALEVEL_OUTPUTPOWER);
	}
#endif
    }
    else
    {
	// -18dBm to +13dBm
	palevel = RF69_PALEVEL_PA0ON | ((power + 18) & RF69_PALEVEL_OUTPUTPOWER);
    }

    spiWrite(RF69_REG_11_PALEVEL, palevel);
}

void RF69::setModemRegisters(const ModemConfig* config)
{
    spiBurstWrite(RF69_REG_02_DATAMODUL,     &config->reg_02, 5);
    spiWrite(RF69_REG_19_RXBW,                config->reg_19);
    spiWrite(RF69_REG_37_PACKETCONFIG1,       config->reg_37);
}

void RF69::setPreambleLength(uint16_t bytes)
{
    spiWrite(RF69_REG_2C_PREAMBLEMSB, bytes >> 8);
    spiWrite(RF69_REG_2D_PREAMBLELSB, bytes & 0xff);
}

void RF69::setSyncWords(const uint8_t* syncWords, uint8_t len)
{
    uint8_t syncconfig = spiRead(RF69_REG_2E_SYNCCONFIG);
    if (syncWords && len && len <= 4)
    {
	spiBurstWrite(RF69_REG_2F_SYNCVALUE1, syncWords, len);
	syncconfig |= RF69_SYNCCONFIG_SYNCON;
    }
    else
	syncconfig &= ~RF69_SYNCCONFIG_SYNCON;
    syncconfig &= ~RF69_SYNCCONFIG_SYNCSIZE;
    syncconfig |= (len-1) << 3;
    spiWrite(RF69_REG_2E_SYNCCONFIG, syncconfig);
}

void RF69::setEncryptionKey(uint8_t* key)
{
    if (key)
    {
	spiBurstWrite(RF69_REG_3E_AESKEY1, key, 16);
	spiWrite(RF69_REG_3D_PACKETCONFIG2, spiRead(RF69_REG_3D_PACKETCONFIG2) | RF69_PACKETCONFIG2_AESON);
    }
    else
    {
	spiWrite(RF69_REG_3D_PACKETCONFIG2, spiRead(RF69_REG_3D_PACKETCONFIG2) & ~RF69_PACKETCONFIG2_AESON);
    }
}

void RF69::waitPacketSent()
{
    while (_mode == RF69_MODE_TX)
	;
}

bool RF69::waitPacketSent(uint16_t timeout)
{
    unsigned long starttime = millis();
    while ((millis() - starttime) < timeout)
        if (_mode != RF69_MODE_TX) // Any previous transmit finished?
           return true;
    return false;
}
